--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     margin-top: 6.5rem;
     font-family: var(--body-highlight-font), serif;
     font-size: var(--body-highlight-font-size);
